# matiocpp

./: CMakeLists.txt  LICENSE  README.md
examples/: example.cpp  example_matio.cpp  example_matiocpp.cpp
src/: CMakeLists.txt
src/matiocpp/: matiocpp.hpp
